fix booking 01